libnma: add PKCS#11 object chooser dialog
Selects a key or a password from a PKCS#11 token and returns an URI.
Allows unlocking the token with a PIN.

--- a/Makefile.am
+++ b/Makefile.am
@@ -501,10 +501,12 @@ libnma_h_priv_real = \
 
 if WITH_GCR
 libnma_h_priv_real += \
-	src/libnma/nma-pkcs11-token-login-dialog.h
+	src/libnma/nma-pkcs11-token-login-dialog.h \
+	src/libnma/nma-pkcs11-cert-chooser-dialog.h
 
 libnma_c_real += \
-	src/libnma/nma-pkcs11-token-login-dialog.c
+	src/libnma/nma-pkcs11-token-login-dialog.c \
+	src/libnma/nma-pkcs11-cert-chooser-dialog.c
 endif
 
 src_libnma_libnmadir = $(includedir)/libnma
@@ -873,12 +875,14 @@ IGNORE_HFILES = \
 	nma-resources.h \
 	nma-version.h \
 	nma-file-cert-chooser.h \
-	nma-pkcs11-token-login-dialog.h
+	nma-pkcs11-token-login-dialog.h \
+	nma-pkcs11-cert-chooser-dialog.h
 
 mkdb_ignore_c_files = \
 	nma-resources.c \
 	nma-file-cert-chooser.c \
-	nma-pkcs11-token-login-dialog.c
+	nma-pkcs11-token-login-dialog.c \
+	nma-pkcs11-cert-chooser-dialog.c
 
 MKDB_OPTIONS = --ignore-files "$(IGNORE_HFILES) $(mkdb_ignore_c_files)"
 
