libnma: add gtk-doc documentation

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,20 @@ man/*.1
 /test-driver
 **/tests/test-*.log
 **/tests/test-*.trs
+
+xml/
+html/
+gtk-doc.make
+libnma-decl-list.txt
+libnma-decl.txt
+libnma-overrides.txt
+libnma-sections.txt
+libnma-undeclared.txt
+libnma-undocumented.txt
+libnma-unused.txt
+libnma.args
+libnma.hierarchy
+libnma.interfaces
+libnma.prerequisites
+libnma.signals
+libnma.types
