--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,13 @@
 AC_PREREQ([2.63])
+
+m4_define([nma_major_version], [1])
+m4_define([nma_minor_version], [7])
+m4_define([nma_micro_version], [0])
+m4_define([nma_version],
+          [nma_major_version.nma_minor_version.nma_micro_version])
+
 AC_INIT([nm-applet],
-        [1.7.0],
+        [nma_version],
         [https://bugzilla.gnome.org/enter_bug.cgi?product=NetworkManager],
         [network-manager-applet])
 
@@ -10,6 +17,15 @@ AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([1.11 no-dist-gzip dist-xz -Wno-portability])
 AM_MAINTAINER_MODE([enable])
 AM_SILENT_RULES([yes])
+
+NMA_MAJOR_VERSION=nma_major_version
+NMA_MINOR_VERSION=nma_minor_version
+NMA_MICRO_VERSION=nma_micro_version
+NMA_VERSION=nma_version
+AC_SUBST(NMA_MAJOR_VERSION)
+AC_SUBST(NMA_MINOR_VERSION)
+AC_SUBST(NMA_MICRO_VERSION)
+AC_SUBST(NMA_VERSION)
 
 dnl
 dnl Require programs
@@ -183,6 +199,7 @@ po/Makefile.in
 man/nm-applet.1
 man/nm-connection-editor.1
 org.gnome.nm-applet.gschema.xml
+src/libnma/nma-version.h
 ])
 AC_OUTPUT
 
