--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ src/libnma/NMA-1.0.gir
 src/libnma/NMA-1.0.typelib
 src/libnma/nma-resources.c
 src/libnma/nma-resources.h
+src/libnma/nma-version.h
 src/libnm-gtk/libnm-gtk.pc
 src/libnm-gtk/NMGtk-1.0.gir
 src/libnm-gtk/NMGtk-1.0.typelib
