--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -32,6 +32,7 @@ src/connection-editor/ce-page.h
 [type: gettext/glade]src/connection-editor/ce-page-ip-tunnel.ui
 [type: gettext/glade]src/connection-editor/ce-page-ip4.ui
 [type: gettext/glade]src/connection-editor/ce-page-ip6.ui
+[type: gettext/glade]src/connection-editor/ce-page-macsec.ui
 [type: gettext/glade]src/connection-editor/ce-page-mobile.ui
 [type: gettext/glade]src/connection-editor/ce-page-ppp.ui
 [type: gettext/glade]src/connection-editor/ce-page-proxy.ui
@@ -61,6 +62,7 @@ src/connection-editor/page-infiniband.c
 src/connection-editor/page-ip-tunnel.c
 src/connection-editor/page-ip4.c
 src/connection-editor/page-ip6.c
+src/connection-editor/page-macsec.c
 src/connection-editor/page-master.c
 src/connection-editor/page-mobile.c
 src/connection-editor/page-ppp.c
