--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -49,6 +49,7 @@ src/connection-editor/ip6-routes-dialog.c
 src/connection-editor/nm-connection-editor.c
 [type: gettext/glade]src/connection-editor/nm-connection-editor.ui
 src/connection-editor/nm-connection-list.c
+[type: gettext/glade]src/connection-editor/nm-connection-list.ui
 src/connection-editor/page-8021x-security.c
 src/connection-editor/page-bluetooth.c
 src/connection-editor/page-bond.c
