--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -41,6 +41,7 @@ src/connection-editor/ce-page.h
 [type: gettext/glade]src/connection-editor/ce-page-vlan.ui
 [type: gettext/glade]src/connection-editor/ce-page-wifi-security.ui
 [type: gettext/glade]src/connection-editor/ce-page-wifi.ui
+src/connection-editor/ce-polkit.c
 src/connection-editor/ce-polkit-button.c
 [type: gettext/glade]src/connection-editor/ce-ppp-auth-methods.ui
 src/connection-editor/connection-helpers.c
