--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,5 +1,5 @@
 option('enable-libnm-gtk', type: 'boolean', value: true, description: 'build legacy library libnm-gtk which depends on libnm-glib/libnm-util/dbus-glib')
-option('enable-appindicator', type: 'boolean', value: true, description: 'Build with libappindicator support instead of xembed systray support.')
+option('enable-appindicator', type: 'boolean', value: false, description: 'Build with libappindicator support instead of xembed systray support.')
 option('enable-wwan', type: 'boolean', value: true, description: 'Enable WWAN support.')
 option('enable-selinux', type: 'boolean', value: true, description: 'Enable support for adjusting SELinux labels in configuration editor.')
 option('enable-team', type: 'boolean', value: true, description: 'Enable team configuration editor.')
