meson: install an appdata.xml file, not metainfo.xml
The editor is a GUI application, not a plugin.

--- a/meson.build
+++ b/meson.build
@@ -456,7 +456,7 @@ custom_target(
   install_dir: nma_appdir
 )
 
-info = 'nm-connection-editor.metainfo.xml'
+info = 'nm-connection-editor.appdata.xml'
 
 custom_target(
   info,
