meson: enable glib introspection by default
The autotools used to automatically detect this. Not an option with
Meson, but since Meson can't ship prebuilt introspection data we should
ensure the user builds it unless he really doesn't need it.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,4 +8,4 @@ option('with-more-asserts', type: 'string', value: '0', description: 'Enable mor
 option('enable-iso-codes', type: 'boolean', value: true, description: 'check for iso-codes at build-time')
 option('enable-ld-gc', type: 'boolean', value: true, description: 'Enable garbage collection of unused symbols on linking')
 option('enable-gtk-doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
-option('enable-introspection', type: 'boolean', value: false, description: 'Enable introspection for this build')
+option('enable-introspection', type: 'boolean', value: true, description: 'Enable introspection for this build')
