meson: enable gtk-doc by default
The autotools used to automatically detect this. Not an option with
Meson, but since Meson can't ship prebuilt documentation we should
ensure the user builds it unless he really doesn't need it.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,5 +7,5 @@ option('enable-gcr', type: 'boolean', value: true, description: 'Enable advanced
 option('with-more-asserts', type: 'string', value: '0', description: 'Enable more assertions for debugging.')
 option('enable-iso-codes', type: 'boolean', value: true, description: 'check for iso-codes at build-time')
 option('enable-ld-gc', type: 'boolean', value: true, description: 'Enable garbage collection of unused symbols on linking')
-option('enable-gtk-doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
+option('enable-gtk-doc', type: 'boolean', value: true, description: 'use gtk-doc to build documentation')
 option('enable-introspection', type: 'boolean', value: true, description: 'Enable introspection for this build')
