--- a/src/libnma/nma-version.h.in
+++ b/src/libnma/nma-version.h.in
@@ -69,9 +69,10 @@
 #define NMA_VERSION_1_8_2  (NMA_ENCODE_VERSION (1, 8, 2))
 #define NMA_VERSION_1_8_4  (NMA_ENCODE_VERSION (1, 8, 4))
 #define NMA_VERSION_1_8_6  (NMA_ENCODE_VERSION (1, 8, 6))
+#define NMA_VERSION_1_8_8  (NMA_ENCODE_VERSION (1, 8, 8))
 
-#define NMA_VERSION_CUR_STABLE  NMA_VERSION_1_8_4
-#define NMA_VERSION_NEXT_STABLE NMA_VERSION_1_8_6
+#define NMA_VERSION_CUR_STABLE  NMA_VERSION_1_8_6
+#define NMA_VERSION_NEXT_STABLE NMA_VERSION_1_8_8
 
 #define NMA_VERSION NMA_ENCODE_VERSION (NMA_MAJOR_VERSION, NMA_MINOR_VERSION, NMA_MICRO_VERSION)
 
