meson: Make sure the entire wireless-security static lib is used
Otherwise ld will not link in the gresources, which contain no "needed"
(as far as ld can determine) symbols.

--- a/src/meson.build
+++ b/src/meson.build
@@ -61,13 +61,20 @@ sources += gnome.compile_resources(
   dependencies: resource_data
 )
 
+incs = [
+  top_inc,
+  utils_inc,
+  src_inc,
+  shared_inc,
+  wireless_security_inc
+]
+
 deps = [
   gtk_dep,
   libnm_dep,
   libnma_dep,
   libnotify_dep,
   libsecret_dep,
-  libwireless_security_libnm_dep,
   m_dep
 ]
 
@@ -109,6 +116,7 @@ executable(
   c_args: cflags,
   link_args: ldflags,
   link_depends: linker_script_ver,
+  link_whole: libwireless_security_libnm,
   install: true,
   install_dir: nma_bindir
 )
