build(meson): fix typo in generation of libnm-gtk.pc
Fixes: 1c1168d4c7a9ed600ea880ed953b9d05b8f04582

https://bugzilla.gnome.org/show_bug.cgi?id=790056

--- a/src/libnm-gtk/meson.build
+++ b/src/libnm-gtk/meson.build
@@ -92,7 +92,7 @@ pkg.generate(
   requires: [
     'NetworkManager ' + nm_req_version,
     'libnm-util ' + nm_req_version,
-    'linm-glib ' + nm_req_version,
+    'libnm-glib ' + nm_req_version,
     'gtk+-3.0 ' + gtk_req_version
   ],
   variables: 'exec_prefix=' + nma_prefix,
