build(meson): Fix index used for PACKAGE_STRING
In the PACKAGE_STRING variable generation wrong index is used.

This patch uses string concatenation to fix the problem.

https://bugzilla.gnome.org/show_bug.cgi?id=790178

--- a/meson.build
+++ b/meson.build
@@ -56,7 +56,7 @@ set_defines = [
   ['PACKAGE', nma_long_name],
   ['PACKAGE_BUGREPORT', 'http://bugzilla.gnome.org/enter_bug.cgi?product=NetworkManager'],
   ['PACKAGE_NAME', 'nm-applet'],
-  ['PACKAGE_STRING', 'nm-applet @1@'.format(nma_version)],
+  ['PACKAGE_STRING', 'nm-applet ' + nma_version],
   ['PACKAGE_TARNAME', nma_long_name],
   ['PACKAGE_URL', ''],
   ['PACKAGE_VERSION', nma_version],
