build(meson): Remove default options
network-manager-applet uses 1 as the project's default warning level
and also sets b_lundef to force the linker to show undefined symbols
as errors. However, meson already sets thos options by default.

This patch removes those options from project's default options.

https://bugzilla.gnome.org/show_bug.cgi?id=790178

--- a/meson.build
+++ b/meson.build
@@ -3,10 +3,8 @@ project(
   version: '1.8.7',
   license: 'GPL2+',
   default_options: [
-    'b_lundef=true',
     'buildtype=debugoptimized',
-    'c_std=gnu99',
-    'warning_level=1'
+    'c_std=gnu99'
   ],
   meson_version: '>= 0.42.0'
 )
