build(meson): Use meson 0.43.0 features
meson 0.43.0 comes with a new function in the compiler's object
called get_supported_arguments, which allows checking multiple
optiones at once.

This patch bumps meson's version number and also takes
advantage of this new feature.

https://bugzilla.gnome.org/show_bug.cgi?id=790178

--- a/meson.build
+++ b/meson.build
@@ -6,7 +6,7 @@ project(
     'buildtype=debugoptimized',
     'c_std=gnu99'
   ],
-  meson_version: '>= 0.42.0'
+  meson_version: '>= 0.43.0'
 )
 
 nma_long_name = 'network-manager-applet'
@@ -172,11 +172,7 @@ if nma_debug
     '-Wundef'
   ]
 
-  foreach cflag: test_cflags
-    if cc.has_argument(cflag)
-      common_flags += [cflag]
-    endif
-  endforeach
+  common_flags += cc.get_supported_arguments(test_cflags)
 endif
 
 add_project_arguments(common_flags, language: 'c')
