--- a/Makefile.am
+++ b/Makefile.am
@@ -864,6 +864,8 @@ EXTRA_DIST += \
 
 EXTRA_DIST += \
 	shared/nm-utils/gsystem-local-alloc.h \
+	shared/nm-utils/nm-compat.c \
+	shared/nm-utils/nm-compat.h \
 	shared/nm-utils/nm-glib.h \
 	shared/nm-utils/nm-macros-internal.h \
 	shared/nm-utils/nm-shared-utils.c \
