libnma: add some test programs
These make it easy to quickly check the widgets provided by the
libnma libary.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ src/libnma/NMA-1.0.typelib
 src/libnma/nma-resources.c
 src/libnma/nma-resources.h
 src/libnma/nma-version.h
+src/libnma/tests/mobile-wizard
+src/libnma/tests/vpn-password-dialog
+src/libnma/tests/wifi-dialog
 src/libnm-gtk/libnm-gtk.pc
 src/libnm-gtk/NMGtk-1.0.gir
 src/libnm-gtk/NMGtk-1.0.typelib
