nma-vpn-password-dialog: turn into a templated GtkWidget
Construct the dialog's widget hierarchy in a declarative manner as
opposed to procedural C.

This also redoes the layout with GtkGrid and simplifies the logic a bit.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -92,6 +92,7 @@ src/libnma/nma-pkcs11-token-login-dialog.c
 [type: gettext/glade]src/libnma/nma-pkcs11-token-login-dialog.ui
 src/libnma/nma-ui-utils.c
 src/libnma/nma-vpn-password-dialog.c
+[type: gettext/glade]src/libnma/nma-vpn-password-dialog.ui
 src/libnma/nma-wifi-dialog.c
 [type: gettext/glade]src/libnma/wifi.ui
 src/libnm-gtk/nm-mobile-providers.c
