m4: parametrize flags variable
Make it possible to add compiler options to a different variable than
CFLAGS. This is useful to conditionally disable a compiler warning for a
subpart of a tree.

(Taken from NetworkManager commit 0999ebdf6d795a84e2afbc13282b400fbd6fd4b5)

--- a/configure.ac
+++ b/configure.ac
@@ -290,10 +290,9 @@ GLIB_CONFIG_NMA
 GLIB_GSETTINGS
 AC_PATH_PROG(GLIB_COMPILE_RESOURCES, glib-compile-resources)
 
-NM_COMPILER_WARNINGS([yes])
+NM_COMPILER_WARNINGS(CFLAGS, [yes])
 NM_LTO
 NM_LD_GC
-
 
 AC_ARG_WITH(more-asserts,
             AS_HELP_STRING([--with-more-asserts=level], [Enable more assertions for debugging (default: 0)]),
